compiler/tests/compiler/expected/output/GenericOperatorNotPresentError.shtk.txt
MODULE TestModules/Pair.shtk
ERROR in Line 12 Col 28

    result.first = a.first + b.first
                           ^
Type error, operator '+' does not exist for GenericOperatorNotPresentError.shtk::FooBar and GenericOperatorNotPresentError.shtk::FooBar

TestModules/Pair.shtk:12:27
GenericOperatorNotPresentError.shtk
